fixing links navbar spacing CSS

--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,9 @@ body{
   display: flex;
   width: 100%;
   height: 100%;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 25px;
 }
 
 .nav-menu{
@@ -81,7 +82,7 @@ body{
 }        
 
 .navbar-wrapper{
-  margin-right: 17em;
+  margin-right: 15em;
 }
 
 .image-link, a{
@@ -102,7 +103,6 @@ body{
 
 .dropdown-btn{
   overflow: hidden;
-  padding: .5em 1em;
   background-color: inherit;
   cursor: pointer;
   border: none;
